atualiza documentacao de convenios
